src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dwP0.25-dhU-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: P0.25\ndefault window height: U\ntabbed"
expression: snapshot
---
initial configure:
size: 320 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
