src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dwP0.25-dhU-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: P0.25\ndefault window height: U\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
